--- a/src/app/pages/todo/todo-list/todo-list.component.html
+++ b/src/app/pages/todo/todo-list/todo-list.component.html
@@ -9,6 +9,12 @@
                 <input #todo matInput type="text" placeholder="Digite a sua tarefa" (keyup.enter)="addTodo(todo.value); todo.value=''">
             </mat-form-field>
 
+            <mat-list role="list">
+                <div *ngFor="let todo of todos">
+                    <app-todo-item [todo]="todo" (remove)="removeTodo($event)"></app-todo-item>
+                </div>
+              </mat-list>
+
             
         </mat-card-content>
     </mat-card>
