--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -13,6 +13,10 @@
                 <li class="nav-item">
                     <a routerLink="/todo" class="nav-link">Lista de Tarefas</a>
                 </li>
+
+                <li class="nav-item">
+                    <a routerLink="/pipes" class="nav-link">Exemplos de Pipes</a>
+                </li>
             </ul>
         </div>
     </div>    
